Fix shifting of search-box

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -52,6 +52,8 @@ mat-divider {
   width: 85%;
   outline: 0;
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 1px;
+  text-align: left;
 }
 
 .search-form {
